dev_ops/kubernetes_/ingress/nginx/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/app-root: /grafana
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /grafana #(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: grafana-ingress
#   namespace: monitoring
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
# spec:
#   rules:
#     - http:
#         paths:
#           - path: /grafana(/|$)(.*)
#             pathType: Prefix
#             backend:
#               service:
#                 name: kube-prometheus-stack-grafana
#                 port:
#                   number: 80
